--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
                 <article>
                 <section class="section">
-                    <h2>Arti Populares</h2>
+                    <h2>Musicas populares</h2>
                     <ul class="carrossel">
                         <li><img src="img/image-1.jpg" alt=""></li>
                         <li><img src="img/image-2.jpg" alt=""></li>
