--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <li><img src="img/image-7.jpg" alt=""></li>
                         <li><img src="img/image-9.jpg" alt=""></li>
                     </ul>
-                    <i class="fa-solid fa-magnifying-glass"></i>
+                    isso<i class="fa-solid fa-magnifying-glass"></i>
                 </section>
                 </article>
             </main>
