--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <footer>
                 <nav>
                 <ul>
-                   <li><i class="fa-solid fa-house"></i>Inicio</li>
+                   <li>quase<i class="fa-solid fa-house"></i>Inicio</li>
 
                    <li><i class="fa-solid fa-magnifying-glass"></i>Procurar</li>
 
