--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
@@ -60,6 +61,11 @@
                         <li><img src="img/image-9.jpg" alt=""></li>
                     </ul>
                     isso<i class="fa-solid fa-magnifying-glass"></i>
+
+                    <i class="fa-solid fa-user"></i>
+                    <i class="fa-brands fa-github"></i>
+                    <i class="fa-regular fa-envelope"></i>
+
                 </section>
                 </article>
             </main>
