--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
+
+    <!-- Font Awesome 6 (versão free, via CDN) -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-HWfZvebZyYqMZzQ2j3VxzVdbZkknsm7+X4rF8zboZ+lebbZQDnQ9A2kzY4KZyL0SPl5bXzX4T2U0L+0OCn4Yxw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
 <body>
