--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </ul>
                     isso<i class="fa-solid fa-magnifying-glass"></i>
 
-                    <i class="fa-solid fa-user"></i>
+                    <i class="fa-solid fa-user"></i>g
                     <i class="fa-brands fa-github"></i>
                     <i class="fa-regular fa-envelope"></i>
 
