--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!-- Font Awesome 6 (versão free, via CDN) -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-HWfZvebZyYqMZzQ2j3VxzVdbZkknsm7+X4rF8zboZ+lebbZQDnQ9A2kzY4KZyL0SPl5bXzX4T2U0L+0OCn4Yxw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 
 </head>
 <body>
@@ -51,7 +50,10 @@
 
                 <article>
                 <section class="section">
+                    <i class="fa-solid fa-globe"></i>
+
                     <h2>Musicas populares</h2>
+                    <i class="fa-light fa-globe-pointer"></i>
                     <ul class="carrossel">
                         <li><img src="img/image-1.jpg" alt=""></li>
                         <li><img src="img/image-2.jpg" alt=""></li>
@@ -62,11 +64,7 @@
                         <li><img src="img/image-7.jpg" alt=""></li>
                         <li><img src="img/image-9.jpg" alt=""></li>
                     </ul>
-                    isso<i class="fa-solid fa-magnifying-glass"></i>
-
-                    <i class="fa-solid fa-user"></i>g
-                    <i class="fa-brands fa-github"></i>
-                    <i class="fa-regular fa-envelope"></i>
+                    isso<i class="fa-solid fa-magnifying-glass"></i><i class="fa-solid fa-globe"></i>
 
                 </section>
                 </article>
