--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
 <body>
@@ -50,10 +48,7 @@
 
                 <article>
                 <section class="section">
-                    <i class="fa-solid fa-globe"></i>
-
                     <h2>Musicas populares</h2>
-                    <i class="fa-light fa-globe-pointer"></i>
                     <ul class="carrossel">
                         <li><img src="img/image-1.jpg" alt=""></li>
                         <li><img src="img/image-2.jpg" alt=""></li>
@@ -64,8 +59,7 @@
                         <li><img src="img/image-7.jpg" alt=""></li>
                         <li><img src="img/image-9.jpg" alt=""></li>
                     </ul>
-                    isso<i class="fa-solid fa-magnifying-glass"></i><i class="fa-solid fa-globe"></i>
-
+                    isso<i class="fa-solid fa-magnifying-glass"></i>
                 </section>
                 </article>
             </main>
