--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
                 <section class="section">
                     <h2>Musicas populares</h2>
                     <ul class="carrossel">
-                        <li><img src="img/image-1.jpg" alt=""></li>
-                        <li><img src="img/image-2.jpg" alt=""></li>
-                        <li><img src="img/image-3.jpg" alt=""></li>
-                        <li><img src="img/image-4.jpg" alt=""></li>
-                        <li><img src="img/image-5.jpg" alt=""></li>
-                        <li><img src="img/image-6.jpg" alt=""></li>
-                        <li><img src="img/image-7.jpg" alt=""></li>
-                        <li><img src="img/image-9.jpg" alt=""></li>
+                        <li><img src="img/image-1.jpg" alt=""><caption>Quando era Crianca</caption></li>
+                        <li><img src="img/image-2.jpg" alt=""><caption>Viva</caption></li>
+                        <li><img src="img/image-3.jpg" alt=""><caption>Jesus ta la</caption></li>
+                        <li><img src="img/image-4.jpg" alt=""><caption>Tropa</caption></li>
+                        <li><img src="img/image-5.jpg" alt=""><caption>titulo1</caption></li>
+                        <li><img src="img/image-6.jpg" alt=""><caption>titulo3</caption></li>
+                        <li><img src="img/image-7.jpg" alt=""><caption>Titulo4</caption></li>
+                        <li><img src="img/image-9.jpg" alt=""><caption>History</caption></li>
                     </ul>
                     isso<i class="fa-solid fa-magnifying-glass"></i>
                 </section>
