--- a/index.html
+++ b/index.html
@@ -57,14 +57,13 @@
                         <li><img src="img/image-7.jpg" alt=""><caption>Titulo4</caption></li>
                         <li><img src="img/image-9.jpg" alt=""><caption>History</caption></li>
                     </ul>
-                    isso<i class="fa-solid fa-magnifying-glass"></i>
                 </section>
                 </article>
             </main>
             <footer>
                 <nav>
                 <ul>
-                   <li>quase<i class="fa-solid fa-house"></i>Inicio</li>
+                   <li><i class="fa-solid fa-house"></i>Inicio</li>
 
                    <li><i class="fa-solid fa-magnifying-glass"></i>Procurar</li>
 
